# uvipystock

./: .dockerignore  .env.example  .gitignore  alembic.ini
admin/: .env.example  (+4 more)
frontend/: README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
frontend/admin/: index.html  package.json
frontend/admin/src/: App.tsx  main.tsx
frontend/admin/src/api/: client.ts  users.ts
frontend/admin/src/pages/: BalancesPage.tsx  EmulatorPage.tsx  LoginPage.tsx  MarketPage.tsx  UsersPage.tsx
frontend/admin/src/store/: adminStore.ts
frontend/backend/alembic/: script.py.mako
frontend/backend/alembic/versions/: 0001_initial.py
frontend/backend/app/api/: deps.py
frontend/backend/app/core/: exceptions.py  rate_limit.py
frontend/backend/app/db/: base.py  seed.py  session.py
frontend/backend/app/matching/: _bridge.py  engine.pxd  setup.py  worker.py
frontend/backend/app/models/: api_key.py  balance.py  order.py  trading_pair.py
frontend/backend/app/redis_client/: client.py  orderbook.py  queues.py  rate_limit.py  stops.py
frontend/backend/app/repositories/: api_key_repo.py  base.py  user_repo.py
frontend/docs/: README.md  deployment.md  development.md  matching_engine.md
frontend/docs/adr/: 001-postgres-as-source-of-truth.md
frontend/frontend/: .env.example  .eslintrc.cjs  index.html  tailwind.config.js
frontend/frontend/src/: App.tsx  vite-env.d.ts
frontend/infra/docker/: admin.Dockerfile  backend.Dockerfile  frontend.Dockerfile  postgres-init.sql  worker.Dockerfile
frontend/infra/nginx/: nginx.conf
frontend/infra/scripts/: build_cython.sh  dev.sh
frontend/src/api/: balance.ts  client.ts  trades.ts
frontend/src/hooks/: useOrderbook.ts  usePrivateFeed.ts  useWebSocket.ts
frontend/src/lib/: format.ts  hmac.ts
frontend/src/pages/: RegisterPage.tsx  TradingPage.tsx
frontend/src/store/: authStore.ts  balanceStore.ts  chartStore.ts  orderbookStore.ts  ordersStore.ts  tradesStore.ts
frontend/src/types/: balance.ts  order.ts
frontend/src/ws/: publicSocket.ts
(+137 files in other folders)
